--- a/openfda-project/static/plantilla.css
+++ b/openfda-project/static/plantilla.css
@@ -1,3 +1,86 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: lightblue;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #CCE1FF;
+}
+.content {
+    margin: 0 auto;
+    min-width: 1000px;
+    max-width: 1000px;
+    background-color: #4C4C4C;
+    border-radius: 10px;
+}
+
+/* Style the header */
+.header {
+    background-color: #f1f1f1;
+    background-image: url("banner.png");
+    background-size: 100% auto;
+    padding: 30px;
+    text-align: center;
+    font-size: 12px;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.menu {
+    font-size: 14px;
+    font-weight: bold;
+    height: 22px;
+    text-align: right;
+    background-color: #4C4C4C;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.menu_item {
+    background-color: #5C5C5C;
+    width: 60px;
+    border-radius: 8px;
+}
+
+/* Create three unequal columns that floats next to each other */
+.column {
+    float: left;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+    border-radius: 10px;
+}
+
+/* Left and right column */
+.column.side {
+    width: 30%;
+    background-color: #7C7C7C;
+}
+
+/* Middle column */
+.column.middle {
+    width: 70%;
+    background-color: #9C9C9C;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Style the footer */
+.footer {
+    background-color: #2C2C2C;
+    padding: 10px;
+    text-align: center;
+    color: #9C9C9C;
+    border-radius: 10px;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+    .column.side, .column.middle {
+        width: 100%;
+    }
 }
