--- a/openfda-project/static/plantilla.css
+++ b/openfda-project/static/plantilla.css
@@ -8,8 +8,8 @@ body {
 }
 .content {
     margin: 0 auto;
-    min-width: 1000px;
-    max-width: 1000px;
+    min-width: 1040px;
+    max-width: 1040px;
     background-color: #4C4C4C;
     border-radius: 10px;
 }
@@ -29,36 +29,43 @@ body {
 .menu {
     font-size: 14px;
     font-weight: bold;
-    height: 22px;
-    text-align: right;
+    height: 30px;
     background-color: #4C4C4C;
-    padding-left: 30px;
-    padding-right: 30px;
+    margin: 10px 10px 0px 10px;
 }
 
 .menu_item {
     background-color: #5C5C5C;
     width: 60px;
+    height: 30px;
     border-radius: 8px;
+    display: block;
+    margin-left: auto;
+    margin-right : 0;
+    text-align: center;
+}
+
+.menu_item.a {
+    color: #D8D8D8;
 }
 
 /* Create three unequal columns that floats next to each other */
 .column {
     float: left;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
     border-radius: 10px;
+    margin: 10px 10px 10px 10px;
 }
 
 /* Left and right column */
 .column.side {
-    width: 30%;
+    width: 300px;
     background-color: #7C7C7C;
 }
 
 /* Middle column */
 .column.middle {
-    width: 70%;
+    width: 700px;
     background-color: #9C9C9C;
 }
 
