--- a/openfda-project/templates/layout.html
+++ b/openfda-project/templates/layout.html
@@ -8,11 +8,11 @@
 <body>
 <div class=content>
   <div class="header">
-    <h2>Imagen</h2>
+    <h2></h2>
   </div>
   <div class="menu">
     <div class="menu_item">
-      <a href = "" > <p>INICIO</p> </a>
+      <a href = "/" > <p>INICIO</p> </a>
     </div>
   </div>
   <div class="row">
@@ -26,7 +26,7 @@
   </div>
 
 <div class="footer">
-  <p>© Myriam Mateos</p>
+  <p>© Myriam Mateos 2018</p>
 </div>
 
 </div>
