--- a/openfda-project/templates/layout.html
+++ b/openfda-project/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<title>Mi pagina</title>
+<title>Medicamentos</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='plantilla.css') }}">
 </head>
 
@@ -12,7 +12,7 @@
   </div>
   <div class="menu">
     <div class="menu_item">
-      <a href = "/" > <p>INICIO</p> </a>
+      <a href = "/" > <img src="static/home_icon.png" alt="Inicio" width="30" height="30"></a>
     </div>
   </div>
   <div class="row">
@@ -27,6 +27,7 @@
 
 <div class="footer">
   <p>© Myriam Mateos 2018</p>
+  <p>myriam.mateos@outlook.es</p>
 </div>
 
 </div>
