--- a/openfda-project/templates/search_company.html
+++ b/openfda-project/templates/search_company.html
@@ -3,7 +3,7 @@
 <h1>Medicamentos de la empresa {{ company }}</h1>
    <ul>
    {% for entry in content %}
-       <li><h2>{{ entry }}</h2>
+       <li>{{ entry }}
    {% endfor %}
    </ul>
 {% endblock %}
