--- a/openfda-project/templates/error.html
+++ b/openfda-project/templates/error.html
@@ -2,6 +2,6 @@
 {% block body %}
 <h1>Error</h1>
    <p>
-   El medicamento buscado no existe
+   Búsqueda incorrecta, intentelo de nuevo.
    </p>
 {% endblock %}
