--- a/openfda-project/templates/inicio.html
+++ b/openfda-project/templates/inicio.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>BUSCADOR</h2>
+<h1>INICIO</h2>
+    <p>Introducir texto para la página de inicio y quitar el formulario repetido </p>
      <form action="/searchDrug">
          Active ingredient:
          <input type="text" name="active_ingredient">
