--- a/openfda-project/templates/inicio.html
+++ b/openfda-project/templates/inicio.html
@@ -1,32 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
 <h1>INICIO</h2>
-    <p>Introducir texto para la página de inicio y quitar el formulario repetido </p>
-     <form action="/searchDrug">
-         Active ingredient:
-         <input type="text" name="active_ingredient">
-         Limite
-         <input type="text" name="limit">
-         <input type="submit" value="Submit">
-    </form>
-    <form action="/searchCompany">
-         <p></p>
-         Company:
-         <input type="text" name="company">
-         Limite
-         <input type="text" name="limit">
-         <input type="submit" value="Submit">
-    </form>
-    <form action="/listDrugs">
-         <p></p>
-         Limite
-         <input type="text" name="limit">
-         <input type="submit" value="List Drugs">
-    </form>
-    <form action="/listCompanies">
-         <p></p>
-         Limite
-         <input type="text" name="limit">
-         <input type="submit" value="List Companies">
-    </form>
+    <p>La siguiente página es un buscador de medicamentos, para la asignatura de programación en entornos de red.</p>
+
 {% endblock %}
